--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -10,7 +9,7 @@
 	</parent>
 	<groupId>com.openmake</groupId>
 	<artifactId>deployhub</artifactId>
-	<version>8.0.11-SNAPSHOT</version>
+	<version>8.0.11</version>
 	<packaging>hpi</packaging>
 	<name>DeployHub Plugin</name>
 	<description>Notify DeployHub of builds and perform automated deployments.</description>
@@ -39,7 +38,7 @@
 		<connection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/deployhub-plugin</url>
-		<tag>deployhub-8.0.8</tag>
+		<tag>deployhub-8.0.11</tag>
 	</scm>
 	<repositories>
 		<repository>
