Change to gson for json parser Signed-off-by: Steve Taylor <steve.taylor@openmakesoftware.com>

--- a/release.properties
+++ b/release.properties
@@ -1,14 +1,21 @@
 #release configuration
-#Wed Jun 20 17:14:28 MDT 2018
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.username=sbtaylor15
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/jenkinsci/deployhub-plugin.git
-preparationGoals=clean install
-scm.password=G0p\!1966
-remoteTagging=true
-projectVersionPolicyId=default
+#Wed Jun 20 17:21:06 MDT 2018
 scm.commentPrefix=[maven-release-plugin] 
-exec.snapshotReleasePluginAllowed=false
+scm.password=G0p\!1966
+pushChanges=true
+scm.tag=deployhub-8.0.11
+remoteTagging=true
+project.scm.com.openmake\:deployhub.connection=scm\:git\:https\://github.com/jenkinsci/deployhub-plugin.git
 exec.additionalArguments=
-completedPhase=check-poms
+projectVersionPolicyId=default
+project.scm.com.openmake\:deployhub.tag=deployhub-8.0.8
+scm.url=scm\:git\:https\://github.com/jenkinsci/deployhub-plugin.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean install
+project.scm.com.openmake\:deployhub.developerConnection=scm\:git\:https\://github.com/jenkinsci/deployhub-plugin.git
+scm.username=sbtaylor15
+project.scm.com.openmake\:deployhub.url=https\://github.com/jenkinsci/deployhub-plugin
+exec.snapshotReleasePluginAllowed=false
+project.rel.com.openmake\:deployhub=8.0.11
+completedPhase=end-release
+project.dev.com.openmake\:deployhub=8.0.12-SNAPSHOT
