--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs-maven-plugin.version}</version>
+				<configuration>
+					<xmlOutput>true</xmlOutput>
+					<failOnError>${findbugs.failOnError}</failOnError>
+				</configuration>
+				<executions>
+					<execution>
+						<id>run-findbugs</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>2.9</version>
+		<version>2.11</version>
+		<relativePath />
 	</parent>
+
 	<groupId>com.openmake</groupId>
 	<artifactId>deployhub</artifactId>
 	<version>8.0.12-SNAPSHOT</version>
 	<packaging>hpi</packaging>
+
+	<properties>
+		<!-- Baseline Jenkins version you use to build the plugin. Users must have 
+			this version or newer to run. -->
+		<jenkins.version>1.625.3</jenkins.version>
+		<!-- Java Level to use. Java 7 required when using core >= 1.612 -->
+		<java.level>7</java.level>
+		<!-- Jenkins Test Harness version you use to test the plugin. -->
+		<!-- For Jenkins version >= 1.580.1 use JTH 2.x or higher. -->
+		<jenkins-test-harness.version>2.13</jenkins-test-harness.version>
+		<!-- Other properties you may want to use: ~ hpi-plugin.version: The HPI 
+			Maven Plugin version used by the plugin.. ~ stapler-plugin.version: The Stapler 
+			Maven plugin version required by the plugin. -->
+		<findbugs-maven-plugin.version>3.0.1</findbugs-maven-plugin.version>
+		<findbugs.failOnError>false</findbugs.failOnError>
+	</properties>
+
 	<name>DeployHub Plugin</name>
 	<description>Notify DeployHub of builds and perform automated deployments.</description>
 	<url>https://www.deployhub.org</url>
+
 	<licenses>
 		<license>
 			<name>GNU Affero General Public License</name>
@@ -38,39 +89,54 @@
 		<connection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/deployhub-plugin</url>
-		<tag>deployhub-8.0.8</tag>
+		<tag>deployhub-8.0.10</tag>
 	</scm>
+
 	<repositories>
 		<repository>
 			<id>repo.jenkins-ci.org</id>
-			<url>http://repo.jenkins-ci.org/public/</url>
+			<url>https://repo.jenkins-ci.org/public/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>repo.jenkins-ci.org</id>
-			<url>http://repo.jenkins-ci.org/public/</url>
+			<url>https://repo.jenkins-ci.org/public/</url>
 		</pluginRepository>
 	</pluginRepositories>
 
+	<organization>
+		<name>DeployHub Inc</name>
+		<url>https://www.deployhub.com</url>
+	</organization>
+
 	<dependencies>
-		<!-- If you want to depend on other plugins:
-		<dependency>
-			<groupId>org.jenkins-ci.plugins</groupId>
-			<artifactId>credentials</artifactId>
-			<version>1.9.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>org.json</artifactId>
-			<version>20141113</version>
-		</dependency> 
-	    -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>credentials</artifactId>
+			<version>2.1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-cps</artifactId>
+			<version>2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>durable-task</artifactId>
+			<version>1.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>annotations</artifactId>
+			<version>3.0.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
+
