--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<build>
 		<plugins>
@@ -42,7 +41,7 @@
 
 	<groupId>com.openmake</groupId>
 	<artifactId>deployhub</artifactId>
-	<version>8.0.12-SNAPSHOT</version>
+	<version>8.0.12</version>
 	<packaging>hpi</packaging>
 
 	<properties>
@@ -89,7 +88,7 @@
 		<connection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/deployhub-plugin</url>
-		<tag>deployhub-8.0.10</tag>
+		<tag>deployhub-8.0.12</tag>
 	</scm>
 
 	<repositories>
