--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 
 	<groupId>com.openmake</groupId>
 	<artifactId>deployhub</artifactId>
-	<version>8.0.13-SNAPSHOT</version>
+	<version>8.0.13</version>
 	<packaging>hpi</packaging>
 
 	<properties>
@@ -88,7 +88,7 @@
 		<connection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/deployhub-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/deployhub-plugin</url>
-		<tag>deployhub-8.0.10</tag>
+		<tag>deployhub-8.0.13</tag>
 	</scm>
 
 	<repositories>
